--- a/log in.html
+++ b/log in.html
@@ -22,7 +22,7 @@
 
    					<div class="user_sign">
    						<p>
-   							<a style="text-decoration:none; color:#0659A5" href="">Sign In / Sign Up</a>
+   							<a style="text-decoration:none; color:#0659A5" href="log in.html">Sign In / Sign Up</a>
    						</p>
    						<a href=""><img style="height:50px; width:50px;"   src="img/Untitled design (1).png" alt=""></a>
    					</div>
