--- a/contact_us.html
+++ b/contact_us.html
@@ -69,11 +69,11 @@
       <h1 >Contact Us</h1>
       <p>If you have any question feel free to let us know. </p>
     </div>
-    <div class="row">
-      <div class="column">
+    <div class="rowcontact">
+      <div class="columncontact">
         <img src="img/map.jpeg" style="width:100%">
       </div>
-      <div class="column">
+      <div class="columncontact">
         <form action="/action_page.php">
           <label for="fname">Name</label>
           <input type="text" id="fname" name="firstname" placeholder="Your full name">
@@ -93,18 +93,18 @@
 
   <body>
 
-    <div class="column">
+    <div class="columncontact">
       <div class="card">
-        <div class="container">
+        <div class="containercontact">
           <h1>Email Us</h1>
           <h3>online.library@gmail.com</h3>
         </div>
       </div>
     </div>
 
-    <div class="column">
+    <div class="columncontact">
       <div class="card">
-        <div class="container">
+        <div class="containercontact">
           <h1>Call Us</h1>
           <h3>+601-4754 145</h3>
         </div>
