--- a/contact_us.html
+++ b/contact_us.html
@@ -64,7 +64,7 @@
 </div>
 
       <div class="containercontact">
-    <div class="aligncenter">
+    <div style="text-align:center">
     <br>
       <h1 >Contact Us</h1>
       <p>If you have any question feel free to let us know. </p>
