--- a/category.html
+++ b/category.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Category</title>
 	<link rel="stylesheet" href="style/style_category_login.css" />
+	<script type="text/javascript">
+alert("Heads up, currently the books that will be shown are not available. Sorry for the inconvinience :( ");
+</script>
+
 </head>
 <body>
 
@@ -35,7 +39,7 @@
 				<nav class="menu">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="about us.html">About</a></li>
+						<li><a href="about us.html">About Us</a></li>
 						<li><a href="category.html">Category</a>
 						<li><a href="">Book Online</a>
 							<ul>
@@ -64,8 +68,8 @@
 		</div>
 
 	</div>
-	<br />
-
+	<br>
+<br>
 	<div class="container_full">
 		<div class="container">
 				<h3 class="h3_design_block">Most Popular Books</h3>
@@ -75,6 +79,9 @@
 							<img src="img/prophet.jpg" alt="" style="width:100%">
 							<figcaption style="padding:5px;"> <span style="float:left; margin-left:2px; margin-top:2px">Price: RM60</span> <span style="color:red; font-weight:bold; float:right; margin-right:2px;"><a style="color:red; font-weight:bold; float:right; margin-right:2px; text-decoration:none" href="">&#x1f6d2; BUY NOW</a></span> </figcaption>
 						</figure>
+
+
+
 					  </div>
 
 					  <div class="column">
@@ -203,6 +210,8 @@
 			</footer>
 		</div>
 	</div>
+
+
 
 
 </body>
