--- a/index.html
+++ b/index.html
@@ -6,64 +6,67 @@
 
     <link rel="stylesheet" href="style/style_category_login.css">
     <link rel="stylesheet" href="style/style_homepage.css">
+     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
     <div class="container_full ">
-		<div class="container">
-			<header>
-				<div class="header">
-					<!--Logo Part-->
-					<div class="logo">
-						<a href="index.html"><img style="height:100px; width:100px" src="img/icon.png" alt="Library" /></a>
-					</div>
-					<div class="text_logo">
-						<h1 style="font-size:30px; color:#0659A5; font-weight:bold;">Online Library</h1>
-					</div>
+  		<div class="container">
+  			<header>
+  				<div class="header">
+  					<!--Logo Part-->
+  					<div class="logo">
+  						<a href="index.html"><img style="height:100px; width:100px" src="img/icon.png" alt="Library" /></a>
+  					</div>
+  					<div class="text_logo">
+  						<h1 style="font-size:30px; color:#0659A5; font-weight:bold;">Online Library</h1>
+  					</div>
 
-					<div class="user_sign">
-						<p>
-							<a style="text-decoration:none; color:#0659A5" href="log in.html">Sign In / Sign Up</a>
-						</p>
-						<a href=""><img style="height:50px; width:50px;"   src="img/Untitled design (1).png" alt=""></a>
-					</div>
-				</div>
-			</header>
-		</div>
-	</div>
+  					<div class="user_sign">
+  						<p>
+  							<a style="text-decoration:none; color:#0659A5" href="log in.html">Sign In / Sign Up</a>
+  						</p>
+  						<a href=""><img style="height:50px; width:50px;"   src="img/Untitled design (1).png" alt=""></a>
+  					</div>
+  				</div>
+  			</header>
+  		</div>
+  	</div>
 
-	<div class="container_full ">
-		<div class="container">
-			<!--Menu Part-->
-				<nav class="menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about us.html">About Us</a></li>
-						<li><a href="category.html">Category</a>
-						<li><a href="">Book Online</a>
-							<ul>
-								<li><a href="">Arts & entertainment</a></li>
-								<li><a href="">Biography</a></li>
-								<li><a href="">business & investing</a></li>
-								<li><a href="">Comupters and Technology</a></li>
-								<li><a href="">Education</a></li>
-								<li><a href="">Sports</a></li>
-								<li><a href="">Technology</a></li>
-								<li><a href="">Science fiction</a></li>
-								<li><a href="">Fiction</a></li>
-								<li><a href="">Islam</a></li>
-								<li><a href="">psychology</a></li>
-							</ul>
-						</li>
-						<li>
-						<li><a href="contact_us.html">Contact Us</a></li>
-            <li><a href="Downloads.html">Downloads</a></li>
-						<li><input type="text" placeholder="Search.."></li>
-					</ul>
-				</nav>
+  	<div class="container_full ">
+  		<div class="container">
+  			<!--Menu Part-->
+  				<nav class="menu">
+  					<ul>
+  						<li><a href="index.html">Home</a></li>
+  						<li><a href="about us.html">About Us</a></li>
+  						<li><a href="category.html">Category</a>
+  						<li><a href="">Book Online</a>
+  							<ul>
+  								<li><a href="">Arts & entertainment</a></li>
+  								<li><a href="">Biography</a></li>
+  								<li><a href="">business & investing</a></li>
+  								<li><a href="">Comupters and Technology</a></li>
+  								<li><a href="">Education</a></li>
+  								<li><a href="">Sports</a></li>
+  								<li><a href="">Technology</a></li>
+  								<li><a href="">Science fiction</a></li>
+  								<li><a href="">Fiction</a></li>
+  								<li><a href="">Islam</a></li>
+  								<li><a href="">psychology</a></li>
+  							</ul>
 
-		</div>
+  						</li>
+  						<li>
 
-	</div>
+  						<li><a href="contact_us.html">Contact Us</a></li>
+  						<li><a href="Downloads.html">Downloads</a></li>
+  						<li><input type="text" placeholder="Search.."></li>
+  					</ul>
+  				</nav>
+
+  		</div>
+
+  	</div>
     <br>
     <br>
     <div class="midtopimg">
@@ -81,11 +84,22 @@
       </div>
         <img  src="img/devonlibrary.jpg" alt="unsplashdevonlibrary" float="right" width="50%" height="275px">
     </div>
-<br><br>
+<br>
+<br>
+<br>
+
+<div class="featured_books" style="max-width:500px">
+  <h2 style="text-align:center">Featured Books</h2>
+  <img class="mySlides w3-animate-left" src="img/arts.jpg" style="width:100%" height="450px">
+  <img class="mySlides w3-animate-left" src="img/babylon.jpg" style="width:100%" height="450px">
+  <img class="mySlides w3-animate-left" src="img/book1.png" style="width:100%" height="450px">
+</div>
 
 <div class="sidebar">
   <b><u>Related Helpful Corner</u></b>
   <br>
+  <br>
+  <p>You coul also visit this page:</p><a href="related_corner.html">Related</a>
   <br>
   <ul>
     <li>-)Why is reading is a good hobby?</li>
@@ -120,6 +134,8 @@
     </footer>
   </div>
 </div>
+
+<script src="js/indexJS.js" charset="utf-8"></script>
 
   </body>
 </html>
