--- a/FreeBooks.html
+++ b/FreeBooks.html
@@ -2,13 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Downloads</title>
-
-    <link rel="stylesheet" type="text/css" href="style/style_downloads.css">
-    <link rel="stylesheet" type="text/css" href="style/style_category_login.css">
+    <title>Free Books</title>
+    <link rel="stylesheet" type="text/css" href="style/EBooks.css">
+<link rel="stylesheet" href="style/style_category_login.css">
   </head>
-
-  	<div class="container_full ">
+  <body class="body">
+    <div class="container_full ">
   		<div class="container">
   			<header>
   				<div class="header">
@@ -66,13 +65,13 @@
   		</div>
 
   	</div>
-  <br><br>
+    <br><br>
+    <div class="div">
       <div class="div2">
-
-        <h1 class="h1">Downloads</h1>
+        <h1 class="h1">Free Books</h1>
       </div>
     <div class="div3">
-      <h1 class="h">Software</h1>
+      <h1 class="h">Bing Bong In The Sky - Mark Allen </h1>
         <table class="p">
           <tr>
             <td>
@@ -94,32 +93,27 @@
             </br>
     </div>
     <div class="div4">
-      <h1 class="h">Free Books</h1>
-      <h3>click this link to go to the free book page:<a href="FreeBooks.html">this link</a> </h3>
-        </br>
-    </div>
-    <div class="div5">
-      <h1 class="h">Videos</h1>
+      <h1 class="h">Stars - Lin Walker </h1>
         <table class="p">
           <tr>
             <td>
-              <li id="p"><a href="#htrbf">How To Read Books Fast </a>
+              <li id="p"><a href="#Bbits">Bing Bong In The Sky - Mark Allen </a>
               </li>
             </td>
           </tr>
           <tr>
             <td>
-              <li id="p"><a href="#t10b2020">Top 10 bestseller 2020 </a>
+              <li id="p"><a href="#slwr">Stars - Lin Walker </a>
               </li>
             </td>
         </table>
         <br>
           <tr>
-            <li id="p"><a href="#SeeMore">See More</a>
-            </li>
+            <li id="p"><a href="#SeeMore">See More</a></li>
           </tr>
         </br>
     </div>
+
     </div>
 
 <div style="background-color:#595959;padding:10px;">
@@ -130,24 +124,24 @@
   <ul style="list-style-type: none;">
     <li style="float:left;margin-left:300px;">
       <a href="facebook.com">
-      <img title="Contact" src="business-contact-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
+      <img title="Contact" src="img/business-contact-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
       </a>
 
     </li>
 
     <li style="float:left;">
-      <img title="e-mail" src="mail-2-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
+      <img title="e-mail" src="img/mail-2-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
 
     </li>
 
     <li style="float:left;">
-      <img title="Call Us" src="phone-39-64.png" alt="library" width="100" height="100"
+      <img title="Call Us" src="img/phone-39-64.png" alt="library" width="100" height="100"
       style="margin-left:30px;margin-right:30px;">
 
     </li>
 
     <li style="float:left;">
-      <img title="Live Chat" src="speech-bubble-2-64.png" alt="library" width="100" height="100"
+      <img title="Live Chat" src="img/speech-bubble-2-64.png" alt="library" width="100" height="100"
       style="margin-left:30px;margin-right:30px;">
 
     </li>
@@ -163,18 +157,18 @@
    <ul style="list-style-type: none;">
      <li style="float:left;margin-left:380px;">
        <a href="facebook.com">
-           <img title="Facebook" src="facebook-6-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
+           <img title="Facebook" src="img/facebook-6-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
        </a>
 
     </li>
 
     <li style="float:left;">
-      <img title="Instagram" src="instagram-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
+      <img title="Instagram" src="img/instagram-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
 
     </li>
 
     <li style="float:left;">
-      <img title="Twitter" src="twitter-3-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
+      <img title="Twitter" src="img/twitter-3-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
 
     </li>
 
@@ -182,5 +176,6 @@
    </ul>
  </div>
   </body>
-    <script src="downloadscript.js" charset="utf-8"></script>
+  <script src="scriptbooks.js" charset="utf-8"></script>
+
 </html>
