--- a/about us.html
+++ b/about us.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Service</title>
-    <link rel="stylesheet" type="text/css" href="style/style_about_us.css">
-    <link rel="stylesheet" href="style/style_category_login.css">
+    <title>About Us</title>
+  <link rel="stylesheet" type="text/css" href="style/style_about_us.css">
+        <link rel="stylesheet" href="style/style_category_login.css">
   </head>
   <body class="body">
     <div class="container_full ">
@@ -65,53 +65,64 @@
   		</div>
 
   	</div>
-  <br><br>
- <div class="div2">
-    <h1 class="h1">Hot Topic</h1>
- </div>
- <div class="div">
- <div class="div1" >
-     <h2 class="h2">About the Library</h2>
+  <div class="w3-content w3-section" style="max-width:1000px; margin:0px auto; padding:5px;">
+    <img class="mySlides" src="img/li11.jpg" width="1000" height="450"/>
+    <img class="mySlides" src="img/li5.jpg" width="1000" height="450"/>
+    <img class="mySlides" src="img/li7.jpg" width="1000" height="450"/>
+    <img class="mySlides" src="img/li8.jpg" width="1000" height="450"/>
+    <img class="mySlides" src="img/li6.jpg" width="1000" height="450"/>
+    <img class="mySlides" src="img/li3.jpg" width="1000" height="450"/>
+    <img class="mySlides" src="img/li9.jpg" width="1000" height="450"/>
 
+  </div>
+
+  <script>
+      var myIndex = 0;
+      carousel();
+
+      function carousel() {
+          var i;
+          var x = document.getElementsByClassName("mySlides");
+          for (i = 0; i < x.length; i++) {
+              x[i].style.display = "none";
+          }
+          myIndex++;
+          if (myIndex > x.length) { myIndex = 1 }
+          x[myIndex - 1].style.display = "block";
+          setTimeout(carousel, 2000);
+      }
+  </script>
+  <div class="div">
+
+  <div class="div2">
+    <h1 class="h1">About Us</h1>
+  </div>
+ <div class="div1">
+   <h2 class="h2">About the Library</h2>
     <ul class="ul">
       <li class="li"><a class ="a" href="service.html">Service</a></li>
       <li class="li"><a class="a" href="hottopic.html">Hot Topic</a></li>
-      <li class="li"><a class="a" href="#sitemap">Site Map</a></li>
       <li class="li"><a class="a" href="access.html">Accessability</a></li>
       <li class="li"><a class="a" href="copys.html">Copuright Statement</a></li>
       <li class="li"><a class ="a" href="privacy.html">Privacy</a></li>
       <li class="li"><a class="a" href="#Contact us">Contact Us</a></li>
+   </ul><br><br><br>
 
-   </ul>
+ </div>
+ <div class="div3">
+
+  <h1 class="h">History of the library</h1>
+  <table class="p">
+    <tr>
+      <td>The Online Library's mission is to develop and maintain online resources and services in support of the
+     present and future teaching, learning and research needs of the IIUM Distance Learning community.<br>
+  The first libraries consisted of archives of the earliest form of writing – the clay tablets in cuneiform script discovered in temple rooms in Sumer, some dating back to 2600 BC. ... Things were much the same in the government and temple records on papyrus of Ancient Egypt.</td>
+   <td><img src="img/li5.jpg" alt="library" width="400" height="300"></td><tr>
+
+</table><br>
+<img src="img/li6.jpg" alt="library" width="750" height="300">
 </div>
-<div class="div3">
- <h1 class="h">Coronavirus resources</h1>
- <p class="p">20 jun 2020 </p>
- <p class="p">This page lists some resources that have been made freely available to help researchers and students during the coronavirus outbreak. Please note that access to these resources is temporary</p>
- <h1 class="h">New features in RefWorks</h1>
- <p class="p">10 jun 2020 </p>
- <p class="p">The Online Library has recently gained access to more features in RefWorks, the reference management tool that is integrated into Summon. These new features will help you to keep track of useful readings you find as you research, and insert references into your essay..</p>
- <h1 class="h">Coronavirus: Online Library is still open</h1>
- <p class="p">01 jun 2020 </p>
- <p class="p">We hope that you and your family are keeping well and healthy. The Online Library team is now working from home, as part of the effort to slow the spread of the virus.  </p>
- <h1 class="h">Webinar recording</h1>
- <p class="p">15 july 2020 </p>
- <p class="p">On the 10th of July, the Online Library conducted a webinar with students, which included a short video demonstration of the Online Library, followed by a Question and Answer session. </p>
- <h1 class="h">New Westlaw Coming Soon!</h1>
- <p class="p">13 july 2020 </p>
- <p class="p">The Westlaw database is moving to a new platform. </p>
- <h1 class="h">The New Online Library Single Sign-On</h1>
- <p class="p">25 july 2020 </p>
- <p class="p">Accessing Online Library resources has just got much easier! </p>
- <h1 class="h">Essential readings for MPAcc module Global Issues for the Finance Professional</h1>
- <p class="p">01 july 2020 </p>
- <p class="p">This Hot Topic Guide is designed to give you extra support on finding essential readings for the MPAcc module Global Issues for the Finance Professional (PAM100). </p>
- <img src="img/li7.jpg" alt="library" width="750" height="300">
-
 </div>
-
-</div>
-
 <div style="background-color:#153388;padding:10px;">
 <center> <h1 style= "color:white; padding-left:10px;">Contact the Enquiry Service</h1><center>
   <ul style="list-style-type: none;">
