--- a/access.html
+++ b/access.html
@@ -2,67 +2,96 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Accessability</title>
+    <title>Accessibility</title>
     <link rel="stylesheet" type="text/css" href="style/style_about_us.css">
-    <link rel="stylesheet" href="style/style_category_login.css">
+        <link rel="stylesheet" href="style/style_category_login.css">
   </head>
-  <body >
+  <body class="body">
     <div class="container_full ">
-		<div class="container">
-			<header>
-				<div class="header">
-					<!--Logo Part-->
-					<div class="logo">
-						<a href="index.html"><img style="height:100px; width:100px" src="img/icon.png" alt="Library" /></a>
-					</div>
-					<div class="text_logo">
-						<h1 style="font-size:30px; color:#0659A5; font-weight:bold;">Online Library</h1>
-					</div>
+  		<div class="container">
+  			<header>
+  				<div class="header">
+  					<!--Logo Part-->
+  					<div class="logo">
+  						<a href="index.html"><img style="height:100px; width:100px" src="img/icon.png" alt="Library" /></a>
+  					</div>
+  					<div class="text_logo">
+  						<h1 style="font-size:30px; color:#0659A5; font-weight:bold;">Online Library</h1>
+  					</div>
 
-					<div class="user_sign">
-						<p>
-							<a style="text-decoration:none; color:#0659A5" href="log in.html">Sign In / Sign Up</a>
-						</p>
-						<a href=""><img style="height:50px; width:50px;"   src="img/Untitled design (1).png" alt=""></a>
-					</div>
-				</div>
-			</header>
-		</div>
-	</div>
+  					<div class="user_sign">
+  						<p>
+  							<a style="text-decoration:none; color:#0659A5" href="log in.html">Sign In / Sign Up</a>
+  						</p>
+  						<a href=""><img style="height:50px; width:50px;"   src="img/Untitled design (1).png" alt=""></a>
+  					</div>
+  				</div>
+  			</header>
+  		</div>
+  	</div>
 
-	<div class="container_full ">
-		<div class="container">
-			<!--Menu Part-->
-				<nav class="menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about us.html">About Us</a></li>
-						<li><a href="category.html">Category</a>
-						<li><a href="">Book Online</a>
-							<ul>
-								<li><a href="">Arts & entertainment</a></li>
-								<li><a href="">Biography</a></li>
-								<li><a href="">business & investing</a></li>
-								<li><a href="">Comupters and Technology</a></li>
-								<li><a href="">Education</a></li>
-								<li><a href="">Sports</a></li>
-								<li><a href="">Technology</a></li>
-								<li><a href="">Science fiction</a></li>
-								<li><a href="">Fiction</a></li>
-								<li><a href="">Islam</a></li>
-								<li><a href="">psychology</a></li>
-							</ul>
-						</li>
-						<li>
-						<li><a href="contact_us.html">Contact Us</a></li>
-            <li><a href="Downloads.html">Downloads</a></li>
-						<li><input type="text" placeholder="Search.."></li>
-					</ul>
-				</nav>
+  	<div class="container_full ">
+  		<div class="container">
+  			<!--Menu Part-->
+  				<nav class="menu">
+  					<ul>
+  						<li><a href="index.html">Home</a></li>
+  						<li><a href="about us.html">About Us</a></li>
+  						<li><a href="category.html">Category</a>
+  						<li><a href="">Book Online</a>
+  							<ul>
+  								<li><a href="">Arts & entertainment</a></li>
+  								<li><a href="">Biography</a></li>
+  								<li><a href="">business & investing</a></li>
+  								<li><a href="">Comupters and Technology</a></li>
+  								<li><a href="">Education</a></li>
+  								<li><a href="">Sports</a></li>
+  								<li><a href="">Technology</a></li>
+  								<li><a href="">Science fiction</a></li>
+  								<li><a href="">Fiction</a></li>
+  								<li><a href="">Islam</a></li>
+  								<li><a href="">psychology</a></li>
+  							</ul>
 
-		</div>
+  						</li>
+  						<li>
 
-	</div>
+  						<li><a href="contact_us.html">Contact Us</a></li>
+  						<li><a href="Downloads.html">Downloads</a></li>
+  						<li><input type="text" placeholder="Search.."></li>
+  					</ul>
+  				</nav>
+
+  		</div>
+
+  	</div>
+<div class="w3-content w3-section" style="max-width:1000px; margin:0px auto; padding:5px;">
+  <img class="mySlides" src="img/li11.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li5.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li7.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li8.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li6.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li3.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li9.jpg" width="1000" height="450"/>
+
+</div>
+
+<script>
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        myIndex++;
+        if (myIndex > x.length) { myIndex = 1 }
+        x[myIndex - 1].style.display = "block";
+        setTimeout(carousel, 2000);
+    }
+</script>
 <div class="div2">
     <h1 class="h1">Accessibility</h1>
 </div>
@@ -73,7 +102,6 @@
     <ul class="ul">
       <li class="li"><a class ="a" href="service.html">Service</a></li>
       <li class="li"><a class="a" href="hottopic.html">Hot Topic</a></li>
-      <li class="li"><a class="a" href="#sitemap">Site Map</a></li>
       <li class="li"><a class="a" href="access.html">Accessibility</a></li>
       <li class="li"><a class="a" href="copys.html">Copuright Statement</a></li>
       <li class="li"><a class ="a" href="privacy.html">Privacy</a></li>
@@ -82,7 +110,7 @@
 </div>
 <div class="div3">
 
-  <h1 class="h">Accessability</h1>
+  <h1 class="h">Accessibility</h1>
   <p class="p">We aim to make this site as accessible and usable as possible for everyone. This includes people with sight problems, hearing, mobility and cognitive impairments, and as far as practical we have also tried to support users with slower connections, older browsers or newer technologies such as smartphones and tablets.</p><br>
   <p class="p">We have followed the WAI Web Content Accessibility Guidelines 2.0 (WCAG 2.0) meeting all of the Level A and the majority of Level AA checkpoints. A minor deviance from the guidelines is that we use alt text for the majority of images, but occasionally if an image is purely decorative we may not include alt text in order to reduce the 'noise' that someone using a screen reader has to listen to in order to get the important information on a page, this is in accordance with the Surf Right guidelines published by the RNIB.</p><br>
   <h2 class="h2">As far as possible we have supported the following:</h2>
@@ -114,15 +142,16 @@
 <center>  <h1 style="color:white;padding-left:10px;">Follow us on:</h1><center>
   <ul style="list-style-type: none;">
 
-    <li style="float:left;margin-left:380px;"><a href="facebook.com"><img src="img/facebook-6-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;"></a>
+    <li style="float:left;margin-left:380px;"><a href="https://www.facebook.com/iiumlibrary"><img src="img/facebook-6-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;"></a>
       <br><span>Facebook</span></li>
-    <li style="float:left;">  <img src="img/instagram-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
+    <li style="float:left;"> <a href="www.facebook.com/OfficialIIUM/"> <img src="img/instagram-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;"></a>
       <br><span>Instagram</span>  </li>
     <li style="float:left;"> <img title="Twitter" src="img/twitter-3-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
      <br><span>Twitter</span> </li>
     <li style="clear:left;"></li>
   </ul>
 
-</div>
+</div><br>
+
   </body>
 </html>
