--- a/contact_us.html
+++ b/contact_us.html
@@ -1,12 +1,48 @@
 
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About Us</title>
-    <link rel="stylesheet" type="text/css" href="style/style_contact_us.css">
+    <title>Contact Us</title>
+    <link rel="stylesheet" type="text/css" href="style/style_contact_us_enquiry.css">
     <link rel="stylesheet" href="style/style_category_login.css">
-  </head><div class="container_full ">
+    <div class="containercontact">
+      <div style="text-align:center">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    margin: 50px 5px 50px;
+  }
+
+  .fa:hover {
+      opacity: 0.7;
+  }
+
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+
+  .fa-google {
+    background: #dd4b39;
+    color: white;
+  }
+  </style>
+</head>
+
+<div class="container_full ">
   <div class="container">
     <header>
       <div class="header">
@@ -51,8 +87,10 @@
               <li><a href="">Islam</a></li>
               <li><a href="">psychology</a></li>
             </ul>
+
           </li>
           <li>
+
           <li><a href="contact_us.html">Contact Us</a></li>
           <li><a href="Downloads.html">Downloads</a></li>
           <li><input type="text" placeholder="Search.."></li>
@@ -63,10 +101,10 @@
 
 </div>
 
-      <div class="containercontact">
+      <br><br>
+  <div class="containercontact">
     <div style="text-align:center">
-    <br>
-      <h1 >Contact Us</h1>
+      <h1>Contact Us</h1>
       <p>If you have any question feel free to let us know. </p>
     </div>
     <div class="rowcontact">
@@ -74,30 +112,35 @@
         <img src="img/map.jpeg" style="width:100%">
       </div>
       <div class="columncontact">
-        <form action="/action_page.php">
-          <label for="fname">Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your full name">
-          <label for="lname">Email</label>
-          <input type="text" id="lname" name="lastname" placeholder="example@abc.com">
-          <label for="lname">Phone</label>
-          <input type="text" id="lname" name="lastname" placeholder="Optional">
 
-          <label for="subject">Subject</label>
-          <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-          <input type="submit" value="Submit">
-        </form>
+<h2>Follow Us on Social Media</h2>
+
+<!-- Add font awesome icons -->
+<a href="https://web.facebook.com/ontorthepro/" class="fa fa-facebook"></a>
+<a href="https://twitter.com/Ontor_syl" class="fa fa-twitter"></a>
+<a href="https://g.page/ontorkl?share" class="fa fa-google"></a>
+</body>
+</html>
+
       </div>
     </div>
   </div>
 
 
-  <body>
+  <div class="columncontact">
+    <div class="card">
+      <div class="containercontact">
+        <h1>Submit Enquiry</h1>
+    <a href="Enquiry.html">Click to submit enquiry</a>
+      </div>
+    </div>
+  </div>
 
     <div class="columncontact">
       <div class="card">
         <div class="containercontact">
           <h1>Email Us</h1>
-          <h3>online.library@gmail.com</h3>
+		 <a href = "mailto:ontor.syl@gmail.com">SEND MAIL</a>
         </div>
       </div>
     </div>
@@ -106,35 +149,13 @@
       <div class="card">
         <div class="containercontact">
           <h1>Call Us</h1>
-          <h3>+601-4754 145</h3>
+		  <a href="tel:60147545145p123">CLICK TO CALL</a>
         </div>
       </div>
     </div>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.398444505405!2d101.73318051386238!3d3.2507429976333087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc38c18f0c1599%3A0x2d53f9d49e6a9ed7!2sIIUM%20Dar%20al-Hikmah%20Library!5e0!3m2!1sen!2sbd!4v1593240349445!5m2!1sen!2sbd" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
-  <div class="container_full third_bg">
-    <div class="container hidden">
-      <footer>
-        <div class="footer">
-          <div class="footer_logo">
-            <div class="header">
-              <!--Logo Part-->
-              <div class="logo">
-                <a href="index.html"><img style="height:100px; width:100px" src="img/icon.png" alt="Library" /></a>
-              </div>
-              <div class="text_logo">
-                <h1 style="font-size:30px; color:#0659A5; font-weight:bold; margin-top:30px;">Online Library</h1>
-              </div>
-            </div>
-            <p  style="font-size:18px; color:#2B2B2B; font-weight:bold; padding:5px;">All Right Reserved by OnlineLibrary.com</p>
-          </div>
-        </div>
-      </footer>
-    </div>
-  </div>
-  </body>
 
 
-
-
+<body>
 </html>
