--- a/copys.html
+++ b/copys.html
@@ -3,68 +3,97 @@
   <head>
     <meta charset="utf-8">
     <title>Copyright Statement</title>
-    <link rel="stylesheet" type="text/css" href="style/style_about_us.css">
-    <link rel="stylesheet" href="style/style_category_login.css">
+  <link rel="stylesheet" type="text/css" href="style/style_about_us.css">
+        <link rel="stylesheet" href="style/style_category_login.css">
   </head>
-  <body >
+  <body class="body">
     <div class="container_full ">
-		<div class="container">
-			<header>
-				<div class="header">
-					<!--Logo Part-->
-					<div class="logo">
-						<a href="index.html"><img style="height:100px; width:100px" src="img/icon.png" alt="Library" /></a>
-					</div>
-					<div class="text_logo">
-						<h1 style="font-size:30px; color:#0659A5; font-weight:bold;">Online Library</h1>
-					</div>
+  		<div class="container">
+  			<header>
+  				<div class="header">
+  					<!--Logo Part-->
+  					<div class="logo">
+  						<a href="index.html"><img style="height:100px; width:100px" src="img/icon.png" alt="Library" /></a>
+  					</div>
+  					<div class="text_logo">
+  						<h1 style="font-size:30px; color:#0659A5; font-weight:bold;">Online Library</h1>
+  					</div>
 
-					<div class="user_sign">
-						<p>
-							<a style="text-decoration:none; color:#0659A5" href="log in.html">Sign In / Sign Up</a>
-						</p>
-						<a href=""><img style="height:50px; width:50px;"   src="img/Untitled design (1).png" alt=""></a>
-					</div>
-				</div>
-			</header>
-		</div>
-	</div>
+  					<div class="user_sign">
+  						<p>
+  							<a style="text-decoration:none; color:#0659A5" href="log in.html">Sign In / Sign Up</a>
+  						</p>
+  						<a href=""><img style="height:50px; width:50px;"   src="img/Untitled design (1).png" alt=""></a>
+  					</div>
+  				</div>
+  			</header>
+  		</div>
+  	</div>
 
-	<div class="container_full ">
-		<div class="container">
-			<!--Menu Part-->
-				<nav class="menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about us.html">About Us</a></li>
-						<li><a href="category.html">Category</a>
-						<li><a href="">Book Online</a>
-							<ul>
-								<li><a href="">Arts & entertainment</a></li>
-								<li><a href="">Biography</a></li>
-								<li><a href="">business & investing</a></li>
-								<li><a href="">Comupters and Technology</a></li>
-								<li><a href="">Education</a></li>
-								<li><a href="">Sports</a></li>
-								<li><a href="">Technology</a></li>
-								<li><a href="">Science fiction</a></li>
-								<li><a href="">Fiction</a></li>
-								<li><a href="">Islam</a></li>
-								<li><a href="">psychology</a></li>
-							</ul>
-						</li>
-						<li>
-						<li><a href="contact_us.html">Contact Us</a></li>
-            <li><a href="Downloads.html">Downloads</a></li>
-						<li><input type="text" placeholder="Search.."></li>
-					</ul>
-				</nav>
+  	<div class="container_full ">
+  		<div class="container">
+  			<!--Menu Part-->
+  				<nav class="menu">
+  					<ul>
+  						<li><a href="index.html">Home</a></li>
+  						<li><a href="about us.html">About Us</a></li>
+  						<li><a href="category.html">Category</a>
+  						<li><a href="">Book Online</a>
+  							<ul>
+  								<li><a href="">Arts & entertainment</a></li>
+  								<li><a href="">Biography</a></li>
+  								<li><a href="">business & investing</a></li>
+  								<li><a href="">Comupters and Technology</a></li>
+  								<li><a href="">Education</a></li>
+  								<li><a href="">Sports</a></li>
+  								<li><a href="">Technology</a></li>
+  								<li><a href="">Science fiction</a></li>
+  								<li><a href="">Fiction</a></li>
+  								<li><a href="">Islam</a></li>
+  								<li><a href="">psychology</a></li>
+  							</ul>
 
-		</div>
+  						</li>
+  						<li>
 
-	</div>
+  						<li><a href="contact_us.html">Contact Us</a></li>
+  						<li><a href="Downloads.html">Downloads</a></li>
+  						<li><input type="text" placeholder="Search.."></li>
+  					</ul>
+  				</nav>
+
+  		</div>
+
+  	</div>
+<div class="w3-content w3-section" style="max-width:1000px; margin:0px auto; padding:5px;">
+  <img class="mySlides" src="img/li11.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li5.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li7.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li8.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li6.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li3.jpg" width="1000" height="450"/>
+  <img class="mySlides" src="img/li9.jpg" width="1000" height="450"/>
+
+</div>
+
+<script>
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        myIndex++;
+        if (myIndex > x.length) { myIndex = 1 }
+        x[myIndex - 1].style.display = "block";
+        setTimeout(carousel, 2000);
+    }
+</script>
 <div class="div2">
-    <h1 class="h1">Copyrigt Statement</h1>
+    <h1 class="h1">Copyright Statement</h1>
 </div>
 <div class="div">
 <div class="div1" >
@@ -73,7 +102,6 @@
    <ul class="ul">
       <li class="li"><a class ="a" href="service.html">Service</a></li>
       <li class="li"><a class="a" href="hottopic.html">Hot Topic</a></li>
-      <li class="li"><a class="a" href="#sitemap">Site Map</a></li>
       <li class="li"><a class="a" href="access.html">Accessability</a></li>
       <li class="li"><a class="a" href="copys.html">Copuright Statement</a></li>
       <li class="li"><a class ="a" href="privacy.html">Privacy</a></li>
@@ -82,7 +110,7 @@
 </div>
 <div class="div3">
 
-  <h1 class="h">Copyrigt Statement</h1>
+  <h1 class="h">Copyright Statement</h1>
   <p class="p">Access to subscription databases, e-journals, e-books and other digital resources offered via the Online Library is subject to copyright and publisher license agreements and restricted to registered students and staff of the IIUM. For further information please contact the Online Library team at:iiumlibary@iium.edu.my</p><br>
    <img src="img/li1.jpeg" alt="library" width="750" height="300">
 </div>
@@ -92,7 +120,7 @@
 <center> <h1 style= "color:white; padding-left:10px;">Contact the Enquiry Service</h1><center>
    <ul style="list-style-type: none;">
 
-     <li style="float:left;margin-left:300px;"><a href="img/facebook.com"><img src="business-contact-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;"></a>
+     <li style="float:left;margin-left:300px;"><a href="facebook.com"><img src="img/business-contact-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;"></a>
        <br><span>Contact</span></li>
      <li style="float:left;">  <img src="img/mail-2-64.png" alt="library" width="100" height="100" style="margin-left:30px;margin-right:30px;">
         <br><span>Mail</span>  </li>
