--- a/log in.html
+++ b/log in.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Log In/Register</title>
     <link rel="stylesheet" href="style/style_category_login.css">
+    <script src="js/categoryform.js" charset="utf-8"></script>
   </head>
-  <body>
+  <body onload = "document.registration.userid.focus(); ">
 
     	<!--Logo Part-->
     <div class="container_full ">
@@ -69,29 +70,42 @@
 
 
 <br><br><br>
-<form action="action_page.php">
-  <div class="containerform">
-    <h1>Register</h1>
-    <p>Please fill in this form to create an account.</p>
-    <hr>
 
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email" required>
+<form class="containerform" name='registration' onSubmit="return formValidation();">
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+<label for="name">Full Name</label>
+<input type="text" name="username" size="50" />
+<label for="passid">Password:</label>
+<input type="password" name="passid" size="12" />
+<label for="userid">Account Name</label></li>
+<input type="text" name="userid" size="12" />
+<label for="address">Address:</label>
+<input type="text" name="address" size="50" />
+<label for="country">Country:</label>
+<select name="country">
+<option selected="" value="Default">(Please select a country)</option>
+<option value="AF">Malaysia</option>
+<option value="AL">Indoanesia</option>
+<option value="DZ">India</option>
+<option value="AS">Bangladesh</option>
+<option value="AD">Thailand</option>
+</select></li>
+<ul>
+  <li><label for="zip">ZIP Code:</label>
+  <input type="text" name="zip" /></li>
+  <li> <label for="email">Email:</label></li>
+  <li><input type="text" name="email" size="50" /></li>
+  <li><label id="gender">Sex:</label></li>
+  <li><input type="radio" name="msex" value="Male" /><span>Male</span></li>
+  <li><input type="radio" name="fsex" value="Female" /><span>Female</span></li>
+  <li><label>Language:</label></li>
+  <li><input type="checkbox" name="en" value="en" checked /><span>English</span></li>
+  <li><input type="checkbox" name="nonen" value="noen" /><span>Non English</span></li>
+  <li><label for="desc">About:</label></li>
+  <li><textarea name="desc" class="textarea"></textarea></li>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
-    <hr>
 
-    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-    <button type="submit" class="registerbtn">Register</button>
-  </div>
-
-  <div class="container signin">
-    <p>Already have an account? <a href="#">Sign in</a>.</p>
-  </div>
+<input type="submit" name="Register" value="Register" class="registerbtn"/>
 </form>
 
 <!--footer-->
