--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <h2 style="text-align:center">Featured Books</h2>
   <img class="mySlides w3-animate-left" src="img/arts.jpg" style="width:100%" height="450px">
   <img class="mySlides w3-animate-left" src="img/babylon.jpg" style="width:100%" height="450px">
-  <img class="mySlides w3-animate-left" src="img/book1.png" style="width:100%" height="450px">
+  <img class="mySlides w3-animate-left" src="img/book1.PNG" style="width:100%" height="450px">
 </div>
 
 <div class="sidebar">
